--- a/app/assets/stylesheets/scaffolds.css.scss
+++ b/app/assets/stylesheets/scaffolds.css.scss
@@ -67,3 +67,10 @@ div {
     list-style: square;
   }
 }
+
+.map-canvas {
+    height:400px  !important;
+    width:100% !important;
+    margin: 0px !important;
+    padding: 0px !important;
+}
