--- a/app/views/premonitions/_form.html.erb
+++ b/app/views/premonitions/_form.html.erb
@@ -11,67 +11,7 @@
     </div>
   <% end %>
 
-  <div class="field">
-    <%= f.label :title %><br>
-    <%= f.text_field :title %>
-  </div>
-  <div class="field">
-    <%= f.label :date %><br>
-    <%= f.text_field :date %>
-  </div>
-  <div class="field">
-    <%= f.label :type %><br>
-    <%= f.text_field :type %>
-  </div>
-  <div class="field">
-    <%= f.label :type_description %><br>
-    <%= f.text_field :type_description %>
-  </div>
-  <div class="field">
-    <%= f.label :description %><br>
-    <%= f.text_field :description %>
-  </div>
-  <div class="field">
-    <%= f.label :location_user %><br>
-    <%= f.text_field :location_user %>
-  </div>
-  <div class="field">
-    <%= f.label :location_premonition %><br>
-    <%= f.text_field :location_premonition %>
-  </div>
-  <div class="field">
-    <%= f.label :premonition_come_true %><br>
-    <%= f.text_field :premonition_come_true %>
-  </div>
-  <div class="field">
-    <%= f.label :premonition_come_true_description %><br>
-    <%= f.text_field :premonition_come_true_description %>
-  </div>
-  <div class="field">
-    <%= f.label :someone_else %><br>
-    <%= f.text_field :someone_else %>
-  </div>
-  <div class="field">
-    <%= f.label :own_conclusions %><br>
-    <%= f.text_field :own_conclusions %>
-  </div>
-  <div class="field">
-    <%= f.label :more_premonitions %><br>
-    <%= f.text_field :more_premonitions %>
-  </div>
-  <div class="field">
-    <%= f.label :tags %><br>
-    <%= f.text_field :tags %>
-  </div>
-  <div class="field">
-    <%= f.label :status %><br>
-    <%= f.number_field :status %>
-  </div>
-  <div class="actions">
-    <%= f.submit %>
-  </div>
-
-
+  
   <div class="jumbotron">
       <div class="container">
         <h1>Premonition report</h1>
@@ -102,25 +42,21 @@
               <div class="col-lg-4">
                 <div class="radio">
                   <label>
-                    <input type="radio" name="optionsRadios" id="optionsRadios1" value="visions">
-                          <%= f.radio_button :type, 'visions' %> Through visions
+                         <%= f.radio_button :type, 'visions' %> Through visions
                   </label>
                 </div>
                 <div class="radio">
                   <label>
-                    <input type="radio" name="optionsRadios" id="optionsRadios2" value="hearings">
                           <%= f.radio_button :type, 'hearings' %> Through hearings
                   </label>
                 </div>
                 <div class="radio">
                   <label>
-                    <input type="radio" name="optionsRadios" id="optionsRadios2" value="feelings">
                           <%= f.radio_button :type, 'feelings' %> Through feelings
                   </label>
                 </div>
                 <div class="radio">
                   <label>
-                    <input type="radio" name="optionsRadios" id="optionsRadios2" value="dreams">
                           <%= f.radio_button :type, 'dreams' %> Through dreams
                   </label>
                 </div>
@@ -131,7 +67,7 @@
             <div class="row" style="margin-top:30px">
               <label for="textArea" class="col-lg-3 control-label">If premonition type is none of the answers of the above question, please give a brief description of the type of your premonition</label>
               <div class="col-lg-9">
-                <textarea class="form-control" name="" rows="3" id="textArea"></textarea>
+                    <%= f.text_area :type_description, class: "form-control", rows: "3" %>
               </div>
             </div>
 
@@ -139,7 +75,7 @@
             <div class="row" style="margin-top:30px">
               <label for="textArea" class="col-lg-3 control-label">Describe us in detail all the data on your premonition. Describing all your feelings and perceptions. In a perception through a vision in addition to the facts, any data can be important, the colors, if your feelings changed over the perception or if you were starring in that perception or if you were a spectator, for example. Any data can be very valuable</label>
               <div class="col-lg-9">
-                <textarea class="form-control" name="" rows="15" id="textArea"></textarea>
+                  <%= f.text_area :description, class: "form-control", rows: "15" %>
               </div>
             </div>
 
@@ -148,17 +84,17 @@
 
 
             <div class="row" style="margin-top:30px">
-                  <label for="inputDateHappen" class="col-lg-5 control-label">Where were you when you had the premonition??, you must locate on the map where you were when you had the premonition, no need be the exact location. It might be worth the city and the country.  
+                  <label for="inputDateHappen" class="col-lg-5 control-label">Where were you when you had the premonition?, you must locate on the map where you were when you had the premonition, no need be the exact location. It might be worth the city and the country.  
                     <br><br>
                       <div class="input-group">
-                          <input type="text" class="form-control" id="report_location" >
+                          <%= f.text_field :location_user_text, class: "form-control", id: "report_location" %>
                           <span class="input-group-btn">
                             <button type="button" class="btn btn-default" onclick="javascript:codeAddress();">Find location</button>
                           </span>
                       </div>
                     <br><br>
                     
-                    <input type="hidden" size="30" name="report[coord]" id="report_coord" class="fieldufo">
+                    <%= f.hidden_field :location_user, class: "form-control", id: "report_coord" %>
                     <span class="help-block">(fill the location text field, click the button "Find location" and you could drag the icon with the mouse in map google to selected location more exact.)</span>
                   </label>                
 
@@ -173,14 +109,14 @@
                   <label for="inputDateHappen" class="col-lg-5 control-label">Where does your premonition happens?, If your premonition happens somewhere, locate your premonition on this map.  
                     <br><br>
                       <div class="input-group">
-                          <input type="text" class="form-control" id="report_location2" >
+                          <%= f.text_field :location_premonition_text, class: "form-control", id: "report_location2" %>
                           <span class="input-group-btn">
                             <button type="button" class="btn btn-default" onclick="javascript:codeAddress2();">Find location</button>
                           </span>
                       </div>
                     <br><br>
                     
-                    <input type="hidden" size="30" name="report[coord2]" id="report_coord2" class="fieldufo">
+                    <%= f.hidden_field :location_premonition, class: "form-control", id: "report_coord2" %>
                     <span class="help-block">(fill the location text field, click the button "Find location" and you could drag the icon with the mouse in map google to selected location more exact.)</span>
                   </label>                
 
@@ -196,27 +132,24 @@
                     <div class="col-lg-3" >
                       <div class="radio">
                         <label>
-                          <input type="radio" name="optionsRadios" id="optionsRadios1" value="visions">
-                                <%= f.radio_button :type, 'yes' %> Yes
+                             <%= f.radio_button :premonition_come_true, 'yes' %> Yes
                         </label>
                       </div>
                       <div class="radio">
                         <label>
-                          <input type="radio" name="optionsRadios" id="optionsRadios2" value="hearings">
-                                <%= f.radio_button :type, 'no' %> No
+                             <%= f.radio_button :premonition_come_true, 'no' %> No
                         </label>
                       </div>
                       <div class="radio">
                         <label>
-                          <input type="radio" name="optionsRadios" id="optionsRadios2" value="feelings">
-                                <%= f.radio_button :type, 'dontknow' %> Don't know
+                             <%= f.radio_button :premonition_come_true, 'dontknow' %> Don't know
                         </label>
                       </div>
                     </div>
 
                     <label for="textArea" class="col-lg-2 control-label">Extends this last response (premonition fulfilled), if you want to do it</label>
                     <div class="col-lg-5">
-                        <textarea class="form-control" name="" rows="8" id="textArea"></textarea>
+                        <%= f.text_area :premonition_come_true_description, class: "form-control", rows: "8" %>
                     </div>
             </div>
 
@@ -227,16 +160,48 @@
             <div class="row" style="margin-top:30px">
                     <label for="textArea" class="col-lg-2 control-label">Do you know someone who has had your same or similar premonition?.</label>
                     <div class="col-lg-3">
-                        <textarea class="form-control" name="" rows="10" id="textArea"></textarea>
+                        <%= f.text_area :someone_else, class: "form-control", rows: "10" %>
                     </div>
 
                     <label for="textArea" class="col-lg-2 control-label">Personal conclusions about your personal premonition. Was it positive?, did it  change your life?, Do you think in your premonitions when you do choices in your daily life?. Describe how your premonition has been important to you in your life.</label>
                     <div class="col-lg-5">
-                        <textarea class="form-control" name="" rows="10" id="textArea"></textarea>
+                        <%= f.text_area :own_conclusions, class: "form-control", rows: "10" %>                        
                     </div>
             </div>
 
 
+            <div class="row" style="margin-top:30px">
+                    <label for="textArea" class="col-lg-2 control-label">Have you had more premonitions?, If so let us know if it is related to the premonition that describes us.</label>
+                    <div class="col-lg-3">
+                        <%= f.text_area :more_premonitions, class: "form-control", rows: "10" %>
+                    </div>
+
+                    <label for="textArea" class="col-lg-2 control-label">If you would have had more than one premonition. How often do you usually have them?.</label>
+                    <div class="col-lg-5">
+                        <%= f.text_area :time_more_premonitions, class: "form-control", rows: "10" %>                        
+                    </div>
+            </div>
+
+
+            <div class="row" style="margin-top:30px">
+                    <label for="textArea" class="col-lg-2 control-label">Write words (tags) that summarize your premonition. <span class="help-block">(press the "Enter" key after each word)</span></label>
+                    <div class="col-lg-3">
+                        <%= f.text_area :tags, class: "form-control", rows: "10", id: "tags" %>
+                    </div>
+                    <div class="col-lg-2">
+                         
+                    </div>
+                    <div class="col-lg-5">
+                         <button class="btn btn-primary" type="submit">Submit</button>
+                    </div>
+
+            </div>
+
+            <script>
+                   $('#tags').tagsInput({
+                      // my parameters here
+                  });
+            </script>
 
      
 
