--- a/app/views/premonitions/new.html.erb
+++ b/app/views/premonitions/new.html.erb
@@ -1,5 +1,25 @@
-<h1>New premonition</h1>
-
+<div class="navbar navbar-default navbar-fixed-top" role="navigation">
+  <div class="container">
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" href="#">Premonitions</a>
+    </div>
+    <div class="navbar-collapse collapse" id="navbar-main">
+      <ul class="nav navbar-nav navbar-right">
+        <li>
+        	<%= link_to 'Login with Twitter', '/auth/twitter' %>
+        </li>
+        <li>
+        	<%= link_to 'Login with Facebook', '/auth/facebook' %>
+        </li>
+      </ul>
+    </div>
+  </div>
+</div>
 <%= render 'form' %>
 
-<%= link_to 'Back', premonitions_path %>
