--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -27,7 +27,7 @@
       <div class="container">
         <h1>Premonition</h1>
         <blockquote>
-        <p><strong>Precognition</strong>, aso called <strong>future sight</strong>, and <strong>second sight</strong>, is a type os extrasensory perception that would involve the acquisition or effect of future information that cannot be deducted from presently available and normally acquired sense-based information.</p>
+        <p><strong>Precognition</strong>, aso called <strong>future sight</strong>, and <strong>second sight</strong>, is a type of <strong>extrasensory perception</strong> that would involve the acquisition or effect of future information that cannot be deducted from presently available and normally acquired sense-based information.</p>
         <small>Precognition definition from <cite title="Wikipedia">Wikipedia</cite></small>
         </blockquote>
         <p><a class="btn btn-primary btn-lg" role="button">Learn more &raquo;</a></p>
