form styles and required fields

--- a/app/assets/stylesheets/scaffolds.css.scss
+++ b/app/assets/stylesheets/scaffolds.css.scss
@@ -74,3 +74,9 @@ div {
     margin: 0px !important;
     padding: 0px !important;
 }
+
+.divrojo {
+    color: #FF0000;
+    display: inline-block;
+    font: 115% Arial,Helvetica,sans-serif;
+}
