--- a/app/assets/stylesheets/scaffolds.css.scss
+++ b/app/assets/stylesheets/scaffolds.css.scss
@@ -72,3 +72,10 @@ div {
     display: inline-block;
     font: 115% Arial,Helvetica,sans-serif;
 }
+
+.error {
+    color: #FF0000;
+    display: inline-block;
+    font: 155% Arial,Helvetica,sans-serif;
+    margin-bottom: 30px;
+}
