user in premonition report

--- a/app/views/premonitions/show.html.erb
+++ b/app/views/premonitions/show.html.erb
@@ -70,5 +70,10 @@
   <%= @premonition.status %>
 </p>
 
+<p>
+  <strong>user_id:</strong>
+  <%= @premonition.user_id %>
+</p>
+
 <%= link_to 'Edit', edit_premonition_path(@premonition) %> |
 <%= link_to 'Back', premonitions_path %>
