turbolinks, link with data-no-turbolink

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -40,7 +40,7 @@
         <div class="col-md-4">
           <h2>Share your Vision</h2>
           <p>Have you had a <strong>dream</strong>, <strong>déjà vu</strong>, or <strong>vision</strong> of a future or past event? Please do report your <strong>extrasensory perception</strong> and share it with the world.</p>
-          <p><%= link_to "View details » ", {controller: "premonitions", action: "new"}, class: "btn btn-default", role: "button" %></p>
+          <p><%= link_to "View details » ", {controller: "premonitions", action: "new"}, class: "btn btn-default", role: "button", 'data-no-turbolink' => true %></p>
         </div>
         <div class="col-md-4">
           <h2>Precognition Cases</h2>
