Logo and jumbotron background

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -7,7 +7,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">Premonitions</a>
+          <a class="navbar-brand" href="#"><%= image_tag "unveiledfuture_logo.png"%></a>
         </div>
         <div class="navbar-collapse collapse" id="navbar-main">
           <ul class="nav navbar-nav navbar-right">
@@ -23,7 +23,7 @@
     </div>
 
     <%# Main jumbotron for a primary marketing message or call to action %>
-    <div class="jumbotron">
+    <div class="jumbotron atom">
       <div class="container">
         <h1>Premonition</h1>
         <blockquote>
