--- a/app/views/premonitions/_form.html.erb
+++ b/app/views/premonitions/_form.html.erb
@@ -19,7 +19,7 @@
   <% end %>
 
   
-  <div class="jumbotron">
+  <div class="jumbotron atom">
       <div class="container">
         <h1>Premonition report</h1>
         <p>In this page you will able to send us a very detailed information about your Premonition.</p>        
@@ -210,7 +210,16 @@
             </div>
 
           </fieldset>
+
+
     </div>
+
+    <div class="container">
+   <hr>
+          <footer>
+            <p>&copy; Company 2014</p>
+          </footer>
+  </div>
 
 
 <% end %>
