response page of form

--- a/app/views/premonitions/show.html.erb
+++ b/app/views/premonitions/show.html.erb
@@ -31,7 +31,7 @@
     </div>
 
 
-<p id="notice"><%= notice %></p>
+
  <div class="container">
 
           <fieldset>
@@ -39,7 +39,7 @@
 
                 <div class="panel panel-info">
                   <div class="panel-heading">
-                    <h3 class="panel-title">Thank you very much for your participation!</h3>
+                    <h3 class="panel-title"><%= notice %> Thank you very much for your participation!</h3>
                   </div>
                   <div class="panel-body">
                     In few days you will be able to see all premonitions which people has sent us, thank you again. Below a summary of your premonition.
