message site building

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -96,6 +96,6 @@
          });
       </script>
       <footer>
-        <p>&copy; Company 2014</p>
+        <p>&copy; Unveiled Future Company 2014</p>
       </footer>
     </div> <%# /container %>
