--- a/app/views/premonitions/_form.html.erb
+++ b/app/views/premonitions/_form.html.erb
@@ -217,7 +217,7 @@
     <div class="container">
    <hr>
           <footer>
-            <p>&copy; Unveiled Future Company 2014</p>
+            <p>&copy; Unveiled Future 2014</p>
           </footer>
   </div>
 
