--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,10 +4,16 @@
 	<meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="Share your preminitions">
-  <meta name="author" content="">
+  <meta name='keywords' content='Premonition, Precognition, Future sight, Second sight, Extrasensory perception, ESP, Unconscious perception, Dreams, Visions, Déjà vu, Parapsychology, Anomalous cognition, Fortune-telling, Retrocognition, Unveiled Future'/>
+<meta name='description' content='Premonitions, precognitions, visions all over the world'/>
+<meta property="og:type" content="website"/>
+<meta property="og:title" content="Premonitions - Unveiled Future"/>
+<meta property="og:site_name" content="Premonitions - Unveiled Future"/>      
+<meta property="og:description" content="Premonitions, precognitions, visions all over the world"/>
+<meta property="og:image" content="http://www.unveiledfuture.com/assets/unveiledfuture_logo-3773bcb060053c2020842b7b1fde3cdc.png" />
+<meta property="og:locale" content="en_US" />
 
-  <title>Premonitions - Site</title>
+  <title>Premonitions, precognitions, visions all over the world</title>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
