Microdata and refactoring

--- a/app/assets/stylesheets/pages.css.scss
+++ b/app/assets/stylesheets/pages.css.scss
@@ -2,6 +2,11 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
+body {
+  padding-bottom: 20px;
+  padding-top: 50px;
+}
+
 .atom {
   background: url('atom_bg.jpg');
   background-size: cover;
