--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,41 +5,24 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name='keywords' content='Premonition, Precognition, Future sight, Second sight, Extrasensory perception, ESP, Unconscious perception, Dreams, Visions, Déjà vu, Parapsychology, Anomalous cognition, Fortune-telling, Retrocognition, Unveiled Future'/>
-<meta name='description' content='Premonitions, precognitions, visions all over the world'/>
-<meta property="og:type" content="website"/>
-<meta property="og:title" content="Premonitions - Unveiled Future"/>
-<meta property="og:site_name" content="Premonitions - Unveiled Future"/>      
-<meta property="og:description" content="Premonitions, precognitions, visions all over the world"/>
-<meta property="og:image" content="http://www.unveiledfuture.com/assets/unveiledfuture_logo-3773bcb060053c2020842b7b1fde3cdc.png" />
-<meta property="og:locale" content="en_US" />
+  <meta name='description' content='Premonitions, precognitions, visions all over the world'/>
+  <meta property="og:type" content="website"/>
+  <meta property="og:title" content="Premonitions - Unveiled Future"/>
+  <meta property="og:site_name" content="Premonitions - Unveiled Future"/>
+  <meta property="og:description" content="Premonitions, precognitions, visions all over the world"/>
+  <meta property="og:image" content="http://www.unveiledfuture.com/assets/unveiledfuture_logo-3773bcb060053c2020842b7b1fde3cdc.png" />
+  <meta property="og:locale" content="en_US" />
 
-  <title>Premonitions, precognitions, visions all over the world</title>
+  <title>Premonitions, precognitions, visions all over the world - Unveiled Future</title>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
 </head>
-<body style="padding-bottom: 20px; padding-top: 50px;">
+<body itemscope itemtype="http://schema.org/WebPage">
 
 <%= yield %>
 
-<script>
+<%= render partial: 'common/ga' %>
 
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-
-  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
- 
-
-  ga('create', 'UA-40361062-2', 'unveiledfuture.com');
-
-  ga('send', 'pageview');
-
- 
-
-</script>
 </body>
 </html>
