--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -58,17 +58,17 @@
       <%# Example row of columns %>
       <div class="row">
         <div class="col-md-4" itemscope itemtype="http://schema.org/WebPageElement">
-          <h2 itemprop="heading">Share your Vision</h2>
+          <h2 itemprop="headline">Share your Vision</h2>
           <p>Have you had a <strong>dream</strong>, <strong>déjà vu</strong>, or <strong>vision</strong> of a future or past event? Please do report your <strong>extrasensory perception</strong> and share it with the world.</p>
           <p><%= link_to "View details » ", {controller: "premonitions", action: "new"}, class: "btn btn-default", role: "button", 'data-no-turbolink' => true %></p>
         </div>
         <div class="col-md-4" itemscope itemtype="http://schema.org/WebPageElement">
-          <h2 itemprop="heading">Precognition Cases</h2>
+          <h2 itemprop="headline">Precognition Cases</h2>
           <p>From <strong>Eleanor Sidgwick</strong> and <strong>Herbert Saltmarsh</strong> to the current date, here you will find many cases of precognition.</p>
           <p><a class="btn btn-default" href="#" role="button" id="attach_box2">View details &raquo;</a></p>
        </div>
         <div class="col-md-4" itemscope itemtype="http://schema.org/WebPageElement">
-          <h2 itemprop="heading">Find People like YOU</h2>
+          <h2 itemprop="headline">Find People like YOU</h2>
           <p>A connection might exist between you and other people all over the world. Search our premonitions database and discover if you had a shared vision.</p>
           <p><a class="btn btn-default" href="#" role="button" id="attach_box3">View details &raquo;</a></p>
         </div>
